@@ -30,7 +30,7 @@ reskins-lib-custom-colors-tier-2=Vyberte barvu pro úroveň 2.\n\n[color=#9cdcfe
 reskins-lib-custom-colors-tier-3=Vyberte barvu pro úroveň 3.\n\n[color=#9cdcfe]Výchozí[/color]: [color=#1b87c2][font=default-bold]1b87c2[/font][/color]
 reskins-lib-custom-colors-tier-4=Vyberte barvu pro úroveň 4.\n\n[color=#9cdcfe]Výchozí[/color]: [color=#a600bf][font=default-bold]a600bf[/font][/color]
 reskins-lib-custom-colors-tier-5=Vyberte barvu pro úroveň 5.\n\n[color=#9cdcfe]Výchozí[/color]: [color=#23de55][font=default-bold]23de55[/font][/color]
-reskins-lib-custom-colors-tier-6=Vyberte barvu pro úroveň 6.\n\n[color=#9cdcfe]Výchozí[/color]: [color=#4d4cff][font=default-bold]4d4cff[/font][/color]
+reskins-lib-custom-colors-tier-6=Vyberte barvu pro úroveň 6.\n\n[color=#9cdcfe]Výchozí[/color]: [color=#ff7700][font=default-bold]ff7700[/font][/color]
 
 [string-mod-setting]
 reskins-lib-tier-mapping-progression-map=Pokrok
