@@ -30,7 +30,7 @@ reskins-lib-custom-colors-tier-2=Farbe für Stufe 2 wählen.\n\n[color=#9cdcfe]S
 reskins-lib-custom-colors-tier-3=Farbe für Stufe 3 wählen.\n\n[color=#9cdcfe]Standard[/color]: [color=#1b87c2][font=default-bold]1b87c2[/font][/color]
 reskins-lib-custom-colors-tier-4=Farbe für Stufe 4 wählen.\n\n[color=#9cdcfe]Standard[/color]: [color=#a600bf][font=default-bold]a600bf[/font][/color]
 reskins-lib-custom-colors-tier-5=Farbe für Stufe 5 wählen.\n\n[color=#9cdcfe]Standard[/color]: [color=#23de55][font=default-bold]23de55[/font][/color]
-reskins-lib-custom-colors-tier-6=Farbe für Stufe 6 wählen.\n\n[color=#9cdcfe]Standard[/color]: [color=#4d4cff][font=default-bold]4d4cff[/font][/color]
+reskins-lib-custom-colors-tier-6=Farbe für Stufe 6 wählen.\n\n[color=#9cdcfe]Standard[/color]: [color=#ff7700][font=default-bold]ff7700[/font][/color]
 
 [string-mod-setting]
 reskins-lib-tier-mapping-progression-map=Fortschritt
