@@ -30,7 +30,7 @@ reskins-lib-custom-colors-tier-2=Choose color for Tier 2.\n\n[color=#9cdcfe]Defa
 reskins-lib-custom-colors-tier-3=Choose color for Tier 3.\n\n[color=#9cdcfe]Default[/color]: [color=#1b87c2][font=default-bold]1b87c2[/font][/color]
 reskins-lib-custom-colors-tier-4=Choose color for Tier 4.\n\n[color=#9cdcfe]Default[/color]: [color=#a600bf][font=default-bold]a600bf[/font][/color]
 reskins-lib-custom-colors-tier-5=Choose color for Tier 5.\n\n[color=#9cdcfe]Default[/color]: [color=#23de55][font=default-bold]23de55[/font][/color]
-reskins-lib-custom-colors-tier-6=Choose color for Tier 6.\n\n[color=#9cdcfe]Default[/color]: [color=#4d4cff][font=default-bold]4d4cff[/font][/color]
+reskins-lib-custom-colors-tier-6=Choose color for Tier 6.\n\n[color=#9cdcfe]Default[/color]: [color=#ff7700][font=default-bold]ff7700[/font][/color]
 
 [string-mod-setting]
 reskins-lib-tier-mapping-progression-map=Progression
