@@ -30,7 +30,7 @@ reskins-lib-custom-colors-tier-2=Escolha uma cor para o Nível 2.\n\n[color=#9cd
 reskins-lib-custom-colors-tier-3=Escolha uma cor para o Nível 3\n\n[color=#9cdcfe]Default[/color]: [color=#1b87c2][font=default-bold]1b87c2[/font][/color]
 reskins-lib-custom-colors-tier-4=Escolha uma cor para o Nível 4.\n\n[color=#9cdcfe]Default[/color]: [color=#a600bf][font=default-bold]a600bf[/font][/color]
 reskins-lib-custom-colors-tier-5=Escolha uma cor para o Nível 5.\n\n[color=#9cdcfe]Default[/color]: [color=#23de55][font=default-bold]23de55[/font][/color]
-reskins-lib-custom-colors-tier-6=Escolha uma cor para o Nível 6.\n\n[color=#9cdcfe]Default[/color]: [color=#4d4cff][font=default-bold]4d4cff[/font][/color]
+reskins-lib-custom-colors-tier-6=Escolha uma cor para o Nível 6.\n\n[color=#9cdcfe]Default[/color]: [color=#ff7700][font=default-bold]ff7700[/font][/color]
 
 [string-mod-setting]
 reskins-lib-tier-mapping-progression-map=Progressão
